--- a/_posts/2015-12-21-1564.markdown
+++ b/_posts/2015-12-21-1564.markdown
@@ -4,14 +4,18 @@ title:  "One Five Six Four"
 date:   2015-12-21 17:50:00 -0500
 categories: looping
 permalink: "1564"
+video-id: 5Mb3aG5hG6k
 ---
-Live loop mashup of everyone's favorite chord progression! 
+Live loop mashup of some songs using the same 'hitmaker' chord progression, I-V-vi-IV.
+Had the idea since high school when we would play I'm Yours and Soul Sister at the same time... 
 
+{% include youtube-embed.html param=page.video-id %}
 [Youtube Video][youtube-link]
 
-Download it! [MP3][mp3-link] and [FLAC][flac-link]
+Download it: [MP3][mp3-link] and [FLAC][flac-link]
 
+(right click->"Save As" if your browser tries to play it)
 
-[youtube-link]: https://www.youtube.com/watch?v=5Mb3aG5hG6k
+[youtube-link]: https://www.youtube.com/watch?v={{video-id}}
 [flac-link]:   https://dl.kylemattimore.com/music/2015/1564/Kyle Mattimore - One Five Six Four.flac
 [mp3-link]: https://dl.kylemattimore.com/music/2015/1564/Kyle Mattimore - One Five Six Four.mp3
